fixed footer layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,21 @@
 
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+
+
+
+
 .navbar-default {
 	padding:20px 0;
 	background: #FFFFFF;
 	box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.23);
-}
-
-body {
-	margin-top:78px;
 }
 
 .wrapper {
@@ -86,7 +94,7 @@ body {
 
 
 .bus-account-holder {
-	margin-bottom:45px;
+	padding-bottom:45px;
 }
 
 
@@ -104,21 +112,27 @@ body {
 	font-size:1.2em;
 }
 
-
 .footer {
-	background: #EEF2F3;
-	height:60px;
-	/*margin-top:50px;*/
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #EEF2F3;
 }
+
+
 
 .footer p {
 	line-height: 50px
 }
 
+
+
+
 .footer a {
 	font-weight: 700
 }
-
 
 
 
